--- a/data/lxplug-bluetooth.ui
+++ b/data/lxplug-bluetooth.ui
@@ -7,7 +7,7 @@
     <property name="border-width">5</property>
     <property name="title" translatable="yes">Add New Device</property>
     <property name="window-position">center</property>
-    <property name="icon-name">preferences-system-bluetooth</property>
+    <property name="icon-name">bluetooth</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox">
